Fix homepage overflow

--- a/docs/_sass/home/section.scss
+++ b/docs/_sass/home/section.scss
@@ -19,6 +19,7 @@
   gap: var(--spacing);
   align-items: stretch;
   z-index: 1;
+  overflow: hidden;
 
   .bd-tw {
     margin-left: auto;
@@ -109,6 +110,7 @@
   display: flex;
   gap: 3rem;
   justify-content: center;
+  overflow: auto;
 
   > * {
     flex-basis: auto;
