--- a/docs/assets/css/website.css
+++ b/docs/assets/css/website.css
@@ -35082,6 +35082,7 @@ has-background-moon.is-hoverable:active {
   gap: var(--spacing);
   align-items: stretch;
   z-index: 1;
+  overflow: hidden;
 }
 .bd-home-section .bd-tw {
   margin-left: auto;
@@ -35160,6 +35161,7 @@ has-background-moon.is-hoverable:active {
   display: flex;
   gap: 3rem;
   justify-content: center;
+  overflow: auto;
 }
 .bd-home-theme-preview > * {
   flex-basis: auto;
